--- a/Store/src/main/resources/application.properties
+++ b/Store/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.mvc.view.prefix=/pages/
-spring.mvc.view.suffix=.jsp
-
-spring.h2.console.enabled=true
+spring.mvc.view.prefix: /
+spring.mvc.view.suffix: .jsp
+spring.messages.basename=validation
 
 #SQL
 spring.datasource.platform=mysql
@@ -10,10 +9,10 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 # Spring JPA
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.properties.hibernate.id.new_generator_mappings=false
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
+
+
 
