--- a/Store/src/main/resources/validation.properties
+++ b/Store/src/main/resources/validation.properties
@@ -1,19 +1,5 @@
-spring.mvc.view.prefix=/pages/
-spring.mvc.view.suffix=.jsp
-
-spring.h2.console.enabled=true
-
-#SQL
-spring.datasource.platform=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/store?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT
-spring.datasource.username=root
-spring.datasource.password=root
-
-# Spring JPA
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.properties.hibernate.id.new_generator_mappings=false
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
-
+NotEmpty=This field is required.
+Size.userForm.username=Please use between 6 and 32 characters.
+Duplicate.userForm.username=Someone already has that username.
+Size.userForm.password=Try one with at least 8 characters.
+Diff.userForm.passwordConfirm=These passwords don't match.
