DB working but whitespsce error on localhost

--- a/Store/src/main/resources/application.properties
+++ b/Store/src/main/resources/application.properties
@@ -9,10 +9,10 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 # Spring JPA
-spring.jpa.hibernate.ddl-auto=create
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
 
-
+spring.main.allow-bean-definition-overriding=true
