--- a/Store/src/main/resources/application.properties
+++ b/Store/src/main/resources/application.properties
@@ -1,18 +1,11 @@
-spring.mvc.view.prefix: /
-spring.mvc.view.suffix: .jsp
-spring.messages.basename=validation
-
-#SQL
-spring.datasource.platform=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/store?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://hk-mysql:3306/test?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=hellokoding
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-# Spring JPA
-
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
-
-spring.main.allow-bean-definition-overriding=true
+spring.freemarker.suffix=.html
