--- a/Store/src/main/resources/application.properties
+++ b/Store/src/main/resources/application.properties
@@ -1,11 +1,18 @@
-spring.datasource.url=jdbc:mysql://hk-mysql:3306/test?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=hellokoding
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.mvc.view.prefix: /
+spring.mvc.view.suffix: .jsp
+spring.messages.basename=validation
 
-spring.jpa.hibernate.ddl-auto=create
+#SQL
+spring.datasource.platform=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/store?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT
+spring.datasource.username=root
+spring.datasource.password=root
+
+# Spring JPA
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
-spring.freemarker.suffix=.html
+
+spring.main.allow-bean-definition-overriding=true
